--- a/app/views/hotmart_params/edit.html.erb
+++ b/app/views/hotmart_params/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing hotmart_param</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @hotmart_param %> |
-<%= link_to 'Back', hotmart_params_path %>
+<%- model_class = HotmartParam -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
