--- a/app/views/hotmart_params/index.html.erb
+++ b/app/views/hotmart_params/index.html.erb
@@ -1,27 +1,37 @@
-<h1>Listing hotmart_params</h1>
-
-<table>
+<%- model_class = HotmartParam -%>
+<div class="page-header">
+  <h1>HOTMART - Parâmetros da API de Notificação</h1>
+  <!--<h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>-->
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @hotmart_params.each do |hotmart_param| %>
       <tr>
         <td><%= hotmart_param.name %></td>
         <td><%= hotmart_param.description %></td>
-        <td><%= link_to 'Show', hotmart_param %></td>
-        <td><%= link_to 'Edit', edit_hotmart_param_path(hotmart_param) %></td>
-        <td><%= link_to 'Destroy', hotmart_param, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to t('.show', default: t("helpers.links.show")),
+                      hotmart_param_path(hotmart_param), class: 'btn btn-success btn-xs' %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_hotmart_param_path(hotmart_param), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      hotmart_param_path(hotmart_param),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Hotmart param', new_hotmart_param_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_hotmart_param_path,
+            :class => 'btn btn-primary' %>
