--- a/app/views/hotmart_params/_form.html.erb
+++ b/app/views/hotmart_params/_form.html.erb
@@ -1,26 +1,11 @@
-<%= simple_form_for @hotmart_param, :html => { :class => "form-horizontal hotmart_param" } do |f| %>
+<%= simple_form_for @hotmart_param, :html => { :class => "form-horizontal" } do |f| %>
 
-  <%= f.input :name %>
-  <%= f.input :description %>
-<!--
-  <div class="control-group">
-    <%= f.label :name, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :name, :class => 'form-control' %>
-    </div>
-    <%= error_span(@hotmart_param[:name]) %>
+  <div class='col-sm-6'>
+    <%= f.input :name %>
+    <%= f.input :description %>
+    <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+              hotmart_params_path, :class => 'btn btn-default' %>
   </div>
-  <div class="control-group">
-    <%= f.label :description, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :description, :class => 'form-control' %>
-    </div>
-    <%= error_span(@hotmart_param[:description]) %>
-  </div>
--->
-
-  <%= f.submit nil, :class => 'btn btn-primary' %>
-  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-            hotmart_params_path, :class => 'btn btn-default' %>
 
 <% end %>
