--- a/app/views/hotmart_params/new.html.erb
+++ b/app/views/hotmart_params/new.html.erb
@@ -1,5 +1,6 @@
 <%- model_class = HotmartParam -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <!-- <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1> -->
+  <h1>Novo Parâmeto</h1
 </div>
 <%= render :partial => 'form' %>
