--- a/app/views/hotmart_params/show.html.erb
+++ b/app/views/hotmart_params/show.html.erb
@@ -1,6 +1,7 @@
 <%- model_class = HotmartParam -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <!-- <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1> -->
+  <h1>Consultar Parâmetro</h1>
 </div>
 
 <dl class="dl-horizontal">
