--- a/app/views/hotmart_params/index.html.erb
+++ b/app/views/hotmart_params/index.html.erb
@@ -4,7 +4,7 @@
   <!--<h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>-->
 </div>
 <div class="table-responsive">
-  <table class="table table-striped">
+  <table class="table table-striped" id='hotmart_params'>
     <thead>
       <tr>
         <th class="col-sm-1"><%= model_class.human_attribute_name(:name) %></th>
