--- a/app/views/api_params/index.html.erb
+++ b/app/views/api_params/index.html.erb
@@ -1,2 +1,39 @@
-<h1>ApiParams#index</h1>
-<p>Find me in app/views/api_params/index.html.erb</p>
+<%- byebug; model_class = HotmartParam -%>
+<div class="page-header">
+  <!-- <h1>HOTMART - Parâmetros da API de Notificação</h1> -->
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<div class="table-responsive">
+  <table class="table table-striped" id='hotmart_params'>
+    <thead>
+      <tr>
+        <th class="col-sm-1"><%= model_class.human_attribute_name(:name) %></th>
+        <th class="col-sm-5"><%= model_class.human_attribute_name(:description) %></th>
+        <th class="col-sm-1"><%=t '.actions', :default => t("helpers.actions") %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @api_params.each do |hotmart_param| %>
+        <tr>
+          <td><%= hotmart_param.name %></td>
+          <td><%= hotmart_param.description %></td>
+          <td>
+            <%= link_to t('.show', default: t("helpers.links.show")),
+                        hotmart_param_path(hotmart_param), class: 'btn btn-success btn-xs' %>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_hotmart_param_path(hotmart_param), :class => 'btn btn-default btn-xs' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        hotmart_param_path(hotmart_param),
+                        :method => :delete,
+                        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                        :class => 'btn btn-xs btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_hotmart_param_path,
+            :class => 'btn btn-primary' %>
