--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,25 +25,11 @@
         <div class="collapse navbar-collapse" id="menu_links">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hotmart <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Parâmetros das APIs <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><%= link_to('Parâmetros da API de Notificação', hotmart_params_path) %></li>
-                <!-- <li class="divider"></li>
-                <li><a href="#">Separated link</a></li> -->
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">MailChimp <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to('Configurações', hotmart_params_path) %></li>
-                <!-- <li class="divider"></li>
-                <li><a href="#">Separated link</a></li> -->
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">HelpScout <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to('Configurações', hotmart_params_path) %></li>
+                <li><%= link_to('Hotmart', hotmart_params_path) %></li>
+                <li><%= link_to('MailChimp', mailchimp_params_path) %></li>
+                <li><%= link_to('HelpScout', helpscout_params_path) %></li>
                 <!-- <li class="divider"></li>
                 <li><a href="#">Separated link</a></li> -->
               </ul>
