--- a/app/views/api_params/edit.html.erb
+++ b/app/views/api_params/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>ApiParams#edit</h1>
-<p>Find me in app/views/api_params/edit.html.erb</p>
+<%- model_class = @api_name.constantize -%>
+<div class="page-header">
+  <!-- <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1> -->
+  <h1>Editar Parâmetro</h1>
+</div>
+<%= render :partial => 'form' %>
