Finishing api params development

--- a/app/views/api_params/_form.html.erb
+++ b/app/views/api_params/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :required %>
     <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-              hotmart_params_path, :class => 'btn btn-default' %>
+              script_api_path(@api_name), :class => 'btn btn-default' %>
   </div>
 
 <% end %>
