--- a/app/views/api_params/new.html.erb
+++ b/app/views/api_params/new.html.erb
@@ -1,2 +1,5 @@
-<h1>ApiParams#new</h1>
-<p>Find me in app/views/api_params/new.html.erb</p>
+<%- model_class = @api_name.constantize -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
