--- a/app/views/api_params/_form.html.erb
+++ b/app/views/api_params/_form.html.erb
@@ -1,12 +1,16 @@
-<%= simple_form_for @api_param, :html => { :class => "form-horizontal" } do |f| %>
+<%= simple_form_for @api_param, :html => { :class => "form-horizontal" },
+  wrapper_mappings: {
+    check_boxes: :vertical_radio_and_checkboxes,
+    radio_buttons: :vertical_radio_and_checkboxes,
+    file: :vertical_file_input,
+    boolean: :vertical_boolean
+  } do |f| %>
 
-  <div class='col-sm-6'>
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :required %>
     <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
               script_api_path(@api_name), :class => 'btn btn-default' %>
-  </div>
 
 <% end %>
