--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,9 +51,9 @@
           </ul> 
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"> User <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.name %> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">LogOut</a></li>
+                <%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
               </ul>
             </li>
           </ul>
@@ -63,7 +63,7 @@
 
     <div class="container">
       <% flash.each do |name, msg| %>
-        <div class="alert alert-<%= name == 'notice' ? "success" : "error" %>">
+        <div class="alert alert-<%= name == 'notice' ? "success" : "danger" %>">
           <a class="close" data-dismiss="alert">×</a>
           <%= msg %>
         </div>
