--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
                 <li><a href="#">Separated link</a></li> -->
               </ul>
             </li>
+            <li><%= link_to t('api.integration'), '#' %></li>
             <!-- <li class="active"><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
