So many things that I don't have a way to describe what was made

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,11 @@
  * file per style scope.
  *
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
+ *= require font-awesome
  *= require_tree .
  *= require_self
  */
+
+.icon-green {
+    color: green;
+}
