--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -23,32 +23,6 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="menu_links">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Parâmetros das APIs <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to('Hotmart', hotmart_params_path) %></li>
-                <li><%= link_to('MailChimp', mailchimp_params_path) %></li>
-                <li><%= link_to('HelpScout', helpscout_params_path) %></li>
-                <!-- <li class="divider"></li>
-                <li><a href="#">Separated link</a></li> -->
-              </ul>
-            </li>
-            <li><%= link_to t('api.integration'), edit_api_key_path %></li>
-            <!-- <li class="active"><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li> -->
-          </ul> 
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.name %> <span class="caret"></span></a>
@@ -61,7 +35,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
       <% flash.each do |name, msg| %>
         <div class="alert alert-<%= name == 'notice' ? "success" : "danger" %>">
           <a class="close" data-dismiss="alert">×</a>
@@ -70,7 +44,19 @@
       <% end %>
 
       <div class="row">
-        <%= yield %>
+        <div class="col-sm-3">
+          <ul class='nav nav-sidebar'>
+            <li class='active'>
+              <a class='side_bar_link' href='#'>Preview</a>
+            </li>
+            <li>
+              <a class='side_bar_link' href='#'>Preview</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-9">
+          <%= yield %>
+        </div>
       </div>
     </div>
 
