--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -47,7 +47,7 @@
         <div class="col-sm-3">
           <ul class='nav nav-sidebar'>
             <li class='active'>
-              <a class='side_bar_link' href='#'>Preview</a>
+              <%= link_to t('api.integration'), edit_api_key_path(api: :hotmart) %>
             </li>
             <li>
               <a class='side_bar_link' href='#'>Preview</a>
