--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
                 <li><a href="#">Separated link</a></li> -->
               </ul>
             </li>
-            <li><%= link_to t('api.integration'), edit_api_key_path %></li>
+            <li><%= link_to t('api.integration'), edit_hotmart_api_key_path(current_user.hotmart_api_key.first.id) %></li>
             <!-- <li class="active"><a href="#">Link</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
