--- a/app/views/api_params/_form.html.erb
+++ b/app/views/api_params/_form.html.erb
@@ -9,7 +9,7 @@
   <div class="col-sm-5">
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.input :required %>
+    <%= f.input :data_type_id, collection: DataType.all, value: @api_param.data_type %>
     <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
               script_api_path(@api_name), :class => 'btn btn-default' %>
