Adding accepted values to api param's form

--- a/app/views/api_params/_form.html.erb
+++ b/app/views/api_params/_form.html.erb
@@ -9,7 +9,16 @@
   <div class="col-sm-5">
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.input :data_type_id, collection: DataType.all, value: @api_param.data_type %>
+    <%= f.association :data_type, collection: DataType.all %>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <%= f.simple_fields_for :accepted_values do |accepted_values| %>
+          <%= render 'accepted_value_fields', f: accepted_values %>
+          <%= link_to_add_association I18n.t('api.api_param.accepted_values_link'), f, :accepted_values, html_options: {:class => 'btn btn-default'} %>
+        <% end %>
+      </div>
+    </div>
+
     <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
               script_api_path(@api_name), :class => 'btn btn-default' %>
