--- a/app/views/api_params/_accepted_value_fields.html.erb
+++ b/app/views/api_params/_accepted_value_fields.html.erb
@@ -1,6 +1,5 @@
-<div class="panel panel-default">
-  <div class="panel-body">
-    <%= f.input :value %>
-    <%= link_to_remove_association I18n.t("api.api_param.delete_accepted_value_link"), f %>
-  </div>
-</div>
+<fieldset>
+  <%= f.input :value %>
+  <%= f.hidden_field :_destroy %>
+  <%= link_to I18n.t("api.api_param.delete_accepted_value_link"), '#', class: 'remove_fields' %>
+</fieldset>
