--- a/app/views/actuation_rules/show.html.erb
+++ b/app/views/actuation_rules/show.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = @activation_rule_name.constantize -%>
+<%- model_class = @actuation_rule_name.constantize -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
@@ -8,20 +8,19 @@
   <dd><%= @activation_rule.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @activation_rule.description %></dd>
-  <dt><strong><%= 'Parameters'.humanize %>:</strong></dt>
-  <dd></dd>
-  <% @activation_rule.activation_params.each do |activation_param| %>
-    <dt><strong><%= ApiParam.human_attribute_name(activation_param.api_param.name) %>:</strong></dt>
-    <dd><%= activation_param.value %></dd>
-  <% end %>
 <dl>
 
+<p>
+  <strong>Description:</strong>
+  <%= @actuation_rule.description %>
+</p>
+
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              activation_rules_path, :class => 'btn btn-default'  %>
+              actuation_rules_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_activation_rule_path(@activation_rule), :class => 'btn btn-default' %>
+              edit_actuation_rule_path(@actuation_rule), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              @activation_rule,
+              @actuation_rule,
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
