--- a/app/views/actuation_rules/_form.html.erb
+++ b/app/views/actuation_rules/_form.html.erb
@@ -1,12 +1,17 @@
-<%= simple_form_for(@actuation_rule) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for @actuation_rule, :html => { :class => "form-vertical" },
+  wrapper_mappings: {
+    check_boxes: :vertical_radio_and_checkboxes,
+    radio_buttons: :vertical_radio_and_checkboxes,
+    file: :vertical_file_input,
+    boolean: :vertical_boolean
+  } do |f| %>
 
-  <div class="form-inputs">
+  <div class="col-sm-5">
     <%= f.input :name %>
     <%= f.input :description %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
+    
+    <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+              script_api_path(@actuation_rule_name), :class => 'btn btn-default' %>
   </div>
 <% end %>
