--- a/app/views/actuation_rules/index.html.erb
+++ b/app/views/actuation_rules/index.html.erb
@@ -16,14 +16,15 @@
     <tbody>
       <% @actuation_rules.each do |rule| %>
         <tr>
-          <td><%= actuation_rule.name %></td>
-          <td><%= actuation_rule.description %></td>
+          <td><%= rule.name %></td>
+          <td><%= rule.description %></td>
           <td>
             <%= link_to t('.show', default: t("helpers.links.show")),
-                        rule, class: 'btn btn-success btn-xs'  %>
+                        script_api_path(@actuation_rule_name, rule), class: 'btn btn-success btn-xs'  %>
             <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                        edit_actuation_rule_path(rule), :class => 'btn btn-default btn-xs' %>
-            <%= link_to t('.destroy', :default => t("helpers.links.destroy")), rule,
+                        script_api_path(@actuation_rule_name, rule, :edit), :class => 'btn btn-default btn-xs' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        script_api_path(@actuation_rule_name, rule),
                         :method => :delete,
                         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                         :class => 'btn btn-xs btn-danger' %>
@@ -38,5 +39,5 @@
 <br>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_actuation_rule_path,
+            script_api_path(@actuation_rule_name, nil, :new),
             :class => 'btn btn-primary' %>
