--- a/app/views/actuation_rules/show.html.erb
+++ b/app/views/actuation_rules/show.html.erb
@@ -5,22 +5,17 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @activation_rule.name %></dd>
+  <dd><%= @actuation_rule.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @activation_rule.description %></dd>
+  <dd><%= @actuation_rule.description %></dd>
 <dl>
 
-<p>
-  <strong>Description:</strong>
-  <%= @actuation_rule.description %>
-</p>
-
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              actuation_rules_path, :class => 'btn btn-default'  %>
+              script_api_path(@actuation_rule_name), :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_actuation_rule_path(@actuation_rule), :class => 'btn btn-default' %>
+              script_api_path(@actuation_rule_name, @actuation_rule, :edit), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              @actuation_rule,
+            script_api_path(@actuation_rule_name, @actuation_rule),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
