--- a/app/views/activation_rules/_activation_param_fields.html.erb
+++ b/app/views/activation_rules/_activation_param_fields.html.erb
@@ -1,9 +1,10 @@
+<%- api_param = f.object.api_param -%>
 <div class="row form-group">
   <div class="col-md-5">
-    <%= f.label f.object.api_param.name %>
-    <%= f.input_field :api_param_id, as: :hidden, value: f.object.api_param.id %>
+    <%= f.label api_param.name %>
+    <%= f.input_field :api_param_id, as: :hidden, value: api_param.id %>
   </div>
   <div class="col-md-7">
-    <%= f.input_field :value, create_options(f.object.api_param) %>
+    <%= f.input_field :value, create_options(api_param) %>
   </div>
 </div>
