Adding first version of Helpscout Notification

--- a/app/views/api_keys/edit.html.erb
+++ b/app/views/api_keys/edit.html.erb
@@ -11,6 +11,9 @@
 </ul>
 
 <% if request.path =~ /^\/hotmart_api_keys\// %>
-  <mark><%= notification_url(current_user.token) %></mark>
+  <mark><%= notification_url(current_user.hotmart_token) %></mark>
+<% end %>
+<% if request.path =~ /^\/helpscout_api_keys\// %>
+  <mark><%= notification_url(current_user.helpscout_token) %></mark>
 <% end %>
 <%= render :partial => 'form' %>
