Adding second version of Helpscout Notification

--- a/app/views/api_keys/edit.html.erb
+++ b/app/views/api_keys/edit.html.erb
@@ -14,6 +14,6 @@
   <mark><%= notification_url(current_user.hotmart_token) %></mark>
 <% end %>
 <% if request.path =~ /^\/helpscout_api_keys\// %>
-  <mark><%= notification_url(current_user.helpscout_token) %></mark>
+  <mark><%= hotmart_info_url(current_user.helpscout_token) %></mark>
 <% end %>
 <%= render :partial => 'form' %>
