--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -55,6 +55,9 @@
             <li class=<%= 'active' if is_active?('actuation_rules', 'MailchimpActuationRule') %>>
               <%= link_to t('api.rule.mailchimp_actuation_rules'), mailchimp_actuation_rules_path %>
             </li>
+            <li class=<%= 'active' if is_active?('rule_associations') %>>
+              <%= link_to t('api.rule.rule_associations'), rule_associations_path %>
+            </li>
           </ul>
         </div>
         <div class="col-sm-9">
