--- a/app/views/mailchimp_actuation_rules/_form.html.erb
+++ b/app/views/mailchimp_actuation_rules/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @actuation_rule, :html => { :class => "form-vertical" },
+<%= simple_form_for @mailchimp_actuation_rule, :html => { :class => "form-vertical" },
   wrapper_mappings: {
     check_boxes: :vertical_radio_and_checkboxes,
     radio_buttons: :vertical_radio_and_checkboxes,
@@ -9,11 +9,12 @@
   <div class="col-sm-5">
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.simple_fields_for :actuation_params, @actuation_rule.arguments do |builder| %>
+    <%= f.input_field :api_method_id, as: :hidden, value: @method.id if @method %>
+    <%= f.simple_fields_for :actuation_params, @mailchimp_actuation_rule.actuation_params do |builder| %>
       <%= render 'actuation_param_fields', f: builder %>
     <% end %>
     <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-              script_api_path(@actuation_rule_name), :class => 'btn btn-default' %>
+              mailchimp_actuation_rules_path, :class => 'btn btn-default' %>
   </div>
 <% end %>
