--- a/app/views/mailchimp_actuation_rules/index.html.erb
+++ b/app/views/mailchimp_actuation_rules/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = @actuation_rule_name.constantize -%>
+<%- model_class = MailchimpActuationRule -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
@@ -14,17 +14,17 @@
     </thead>
 
     <tbody>
-      <% @actuation_rules.each do |rule| %>
+      <% @mailchimp_actuation_rules.each do |rule| %>
         <tr>
           <td><%= rule.name %></td>
           <td><%= rule.description %></td>
           <td>
             <%= link_to t('.show', default: t("helpers.links.show")),
-                        script_api_path(@actuation_rule_name, rule), class: 'btn btn-success btn-xs'  %>
+                        mailchimp_actuation_rule_path(rule), class: 'btn btn-success btn-xs'  %>
             <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                        script_api_path(@actuation_rule_name, rule, :edit), :class => 'btn btn-default btn-xs' %>
+                        edit_mailchimp_actuation_rule_path(rule), :class => 'btn btn-default btn-xs' %>
             <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                        script_api_path(@actuation_rule_name, rule),
+                        mailchimp_actuation_rule_path(rule),
                         :method => :delete,
                         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                         :class => 'btn btn-xs btn-danger' %>
@@ -39,5 +39,5 @@
 <br>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            script_api_path(@actuation_rule_name, nil, :new),
+            new_mailchimp_actuation_rule_path,
             :class => 'btn btn-primary' %>
