--- a/app/views/mailchimp_actuation_rules/show.html.erb
+++ b/app/views/mailchimp_actuation_rules/show.html.erb
@@ -1,25 +1,27 @@
-<%- model_class = @actuation_rule_name.constantize -%>
+<%- model_class = MailchimpActuationRule -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @actuation_rule.name %></dd>
+  <dd><%= @mailchimp_actuation_rule.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @actuation_rule.description %></dd>
-  <% @actuation_rule.actuation_params.each do |param| %>
-    <dt><strong><%= ApiParam.human_attribute_name(param.api_param.name) %>:</strong></dt>
+  <dd><%= @mailchimp_actuation_rule.description %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:api_method_id) %>:</strong></dt>
+  <dd><%= @mailchimp_actuation_rule.api_method.name %></dd>
+  <% @mailchimp_actuation_rule.actuation_params.each do |param| %>
+    <dt><strong><%= ApiParam.human_attribute_name(param.argument.api_param.name) %>:</strong></dt>
     <dd><%= param.value %></dd>
   <% end %>
 <dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              script_api_path(@actuation_rule_name), :class => 'btn btn-default'  %>
+              mailchimp_actuation_rules_path, :class => 'btn btn-default' %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              script_api_path(@actuation_rule_name, @actuation_rule, :edit), :class => 'btn btn-default' %>
+              edit_mailchimp_actuation_rule_path(@mailchimp_actuation_rule), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-            script_api_path(@actuation_rule_name, @actuation_rule),
+            mailchimp_actuation_rule_path(@mailchimp_actuation_rule),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
