--- a/app/views/rule_associations/_form.erb
+++ b/app/views/rule_associations/_form.erb
@@ -12,6 +12,6 @@
 
     <%= f.submit nil, :class => 'btn btn-primary', value: 'Update' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-              activation_rules_path, :class => 'btn btn-default' %>
+              rule_associations_path, :class => 'btn btn-default' %>
   </div>
 <% end %>
