--- a/app/views/activation_rules/_form.html.erb
+++ b/app/views/activation_rules/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @activation_rule, url: :activation_rules, :html => { :class => "form-vertical" },
+<%= simple_form_for @activation_rule, :html => { :class => "form-vertical" },
   wrapper_mappings: {
     check_boxes: :vertical_radio_and_checkboxes,
     radio_buttons: :vertical_radio_and_checkboxes,
