--- a/app/views/rule_associations/show.html.erb
+++ b/app/views/rule_associations/show.html.erb
@@ -3,24 +3,21 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%=  %>:</strong></dt>
+  <dt><strong>Regra Hotmart:</strong></dt>
   <dd><%= @activation_rule.name %></dd>
-  <dt><strong><%= MailchimpActuationRule.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @activation_rule.description %></dd>
-  <dt><strong><%= 'Parameters'.humanize %>:</strong></dt>
-  <dd></dd>
-  <% @activation_rule.activation_params.each do |activation_param| %>
-    <dt><strong><%= ApiParam.human_attribute_name(activation_param.api_param.name) %>:</strong></dt>
-    <dd><%= activation_param.value %></dd>
+  <dt><strong>Regras Mailchimp:</strong></dt>
+  <% @activation_rule.mailchimp_actuation_rules.each do |mc_rule| %>
+    <dd><%= mc_rule.name %></dd>
+    <dt></dt>
   <% end %>
 <dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              activation_rules_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_activation_rule_path(@activation_rule), :class => 'btn btn-default' %>
+              rule_associations_path, :class => 'btn btn-default'  %>
+<%# link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_rule_association_path(@activation_rule), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              @activation_rule,
+              rule_association_path(@activation_rule),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
