--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -11,7 +11,7 @@
       <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Brand</a>
+          <%= link_to(image_tag("e-editora_logo.png", :alt => "E-Editora", id: :logo), root_path) %>
         </div>
       </div><!-- /.container-fluid -->
     </nav>
