--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <%= link_to(image_tag("e-editora_logo.png", :alt => "E-Editora", id: :logo), root_path) %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
