--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <%= link_to(image_tag("e-editora_logo.png", :alt => "E-Editora", id: :logo ), root_path) %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,6 +57,9 @@
             </li>
             <li class=<%= 'active' if is_active?('rule_associations') %>>
               <%= link_to t('api.rule.rule_associations'), rule_associations_path %>
+            </li>
+            <li class=<%= 'active' if is_active?('notifications') %>>
+              <%= link_to t('api.rule.notification.logs'), notifications_path %>
             </li>
           </ul>
         </div>
