Finalizando funcionalidades e começando pequenos ajustes e correçõs

--- a/app/views/mailchimp_actuation_rules/_actuation_param_fields.html.erb
+++ b/app/views/mailchimp_actuation_rules/_actuation_param_fields.html.erb
@@ -1,12 +1,17 @@
 <div class="row form-group">
-  <div class="col-md-5">
+  <div class="col-md-5" id=<%= f.object.argument.api_param.name == 'group_name' ? "div_argument_id" : "" %>>
     <%= link_to '?', '#', "data-toggle" => "tooltip",
                           title: f.object.argument.api_param.description,
                           "data-placement" => "top" %>
     <%= f.label f.object.argument.api_param.name %>
     <%= f.input_field :argument_id, as: :hidden, value: f.object.argument_id %>
   </div>
-  <div class="col-md-7">
-    <%= f.input_field :value, create_options_for_actuation_rules(f.object.argument.api_param) %>
+  <div class="col-md-6" id=<%= f.object.argument.api_param.name == 'group_name' ? "div_input_group_name" : "" %> >
+    <%= f.input_field :value, create_options_for_actuation_rules(f.object.argument.api_param) unless f.object.argument.api_param.name == 'group_name'  %>
+  </div>
+  <div class="col-md-1" >
+    <%= link_to '#', id: :add_group_name, style: "display:none" do %>
+      <%= fa_icon('plus') %>
+    <% end if f.object.argument.api_param.name == 'group_name' %>
   </div>
 </div>
