--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -14,15 +14,15 @@
     </thead>
 
     <tbody>
-      <% @logs.each do |rule| %>
+      <% @logs.each do |log| %>
         <tr>
-          <td><%= rule.activation_rule.name %></td>
-          <td><%= simple_format rule.mailchimp_response %></td>
-          <td><%= rule.created_at.strftime("%d/%m/%Y - %H:%M:%S") %></td>
+          <td><%= log.activation_rule.nil? ? 'Nenhuma regra ativada' : log.activation_rule.name %></td>
+          <td><%= simple_format log.mailchimp_response %></td>
+          <td><%= log.created_at.strftime("%d/%m/%Y - %H:%M:%S") %></td>
           <td>
             <%= link_to 'Exibir notificação',
-                        rule, class: 'btn btn-success btn-xs'  %>
-            <%= link_to t('.destroy', :default => t("helpers.links.destroy")), rule,
+                        log, class: 'btn btn-success btn-xs'  %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")), log,
                         :method => :delete,
                         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                         :class => 'btn btn-xs btn-danger' %>
