--- a/app/views/activation_rules/index.html.erb
+++ b/app/views/activation_rules/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = @activation_rule_name.constantize -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>Regras Hotmart</h1>
 </div>
 
 <div class="table-responsive">
@@ -19,11 +19,9 @@
           <td><%= rule.name %></td>
           <td><%= rule.description %></td>
           <td>
-            <%= link_to t('.show', default: t("helpers.links.show")),
-                        rule, class: 'btn btn-success btn-xs'  %>
-            <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                        edit_activation_rule_path(rule), :class => 'btn btn-default btn-xs' %>
-            <%= link_to t('.destroy', :default => t("helpers.links.destroy")), rule,
+            <%= link_to 'Mostrar', rule, class: 'btn btn-success btn-xs'  %>
+            <%= link_to 'Editar', edit_activation_rule_path(rule), :class => 'btn btn-default btn-xs' %>
+            <%= link_to 'Deletar', rule,
                         :method => :delete,
                         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                         :class => 'btn btn-xs btn-danger' %>
