--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.name %> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+                <%= link_to 'Sair', destroy_user_session_path, :method => :delete %></li>
               </ul>
             </li>
           </ul>
